# Studium

./: .gitignore
GP2/Praktikum/prak_test/: main.cpp
GP2/Pruefung/Uebung_5_1/: main.cpp
INF2/BS/17und4/: 17und4.c  a.out  main.c
INF2/BS/BS1/: a.out  aufgabe  aufgabe.c  listing  listing.c  listing.cpp  main.c
INF2/BS/BS2/: a.out  collatz  collatz.c  collatz.cpp  collatz2.c  collatz_cpp.cpp  collatz_map.cpp  collatz_omp.c  collatz_omp.cpp  temp.c
INF2/BS/BS4/: BS4.c  BS4_2.c  a.out  afugabe4.c  aufgabe.c  aufgabe2.c  aufgabe3.c
INF2/BS/BS5/: consumer  consumer.c  producer  producer.c
Tets/: main.c
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/log/: latest_build
ros2_ws/py_pubsub/: package.xml  setup.py
ros2_ws/py_pubsub/log/: latest_list
ros2_ws/py_pubsub/py_pubsub/: publisher_member_function.py
ros2_ws/py_pubsub/py_pubsub/install/: local_setup.sh  setup.sh  setup.zsh
ros2_ws/py_pubsub/py_pubsub/log/: latest_build
ros2_ws/src/chatting/: CMakeLists.txt
ros2_ws/src/chatting/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh
ros2_ws/src/chatting/install/chatting/share/chatting/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/src/chatting/log/: latest_build  latest_list
ros2_ws/src/chatting/msg/: AddressBook.msg
ros2_ws/src/chatting/src/: publisher_lambda_function.cpp  subscriber_lambda_function.cpp
ros2_ws/src/cpp_pubsub/: CMakeLists.txt
ros2_ws/src/log/: latest_list
ros2_ws/src/more_interfaces/: package.xml
ros2_ws/src/test_controller/: package.xml  setup.cfg  setup.py
(+55 files in other folders)
